# open-slay

./: LICENSE  package-lock.json  package.json  snowpack.config.js
src/js/: index.js  util.js
src/rust/: Cargo.toml
src/rust/lib/: color.rs  config.rs  game.rs  main.rs  wasm.rs
static/: index.html  main.css
