[package]
name = "rust-wasm-slay"
version = "0.1.0"
edition = "2021"

[lib]
name = "open_slay"
crate-type = ["cdylib", "rlib"]
path = "lib/main.rs"

[dependencies]
wasm-bindgen = "0.2.*"
js-sys = "0.3.*"
web-sys = { version = "0.3.*", features = ["console"] }

[profile.release]
opt-level = "s" # small codesize optimization
