[package]
name = "rust-wasm-slay"
version = "0.1.0"
edition = "2021"

[lib]
name = "open_slay"
crate-type = ["cdylib", "rlib"]
path = "lib/main.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.*"
js-sys = "0.3.*"
web-sys = { version = "0.3.*", features = ["console"] }
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
console_error_panic_hook = { version = "0.1.*", optional = true }

[profile.release]
opt-level = "s" # small codesize optimization
